<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="316dp"
    android:background="#BDBDBD"
    android:backgroundTintMode="@null"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical">

    <ImageView
        android:layout_width="131dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/logo_game" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Score"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" : 100"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="45dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_exit"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/exit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/Exit"
                android:textColor="#000000"
                android:textSize="30dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btn_retru"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/retry" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:text="@string/Retry"
                android:textColor="#000000"
                android:textSize="30dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>